installation et config JWT

--- a/.env
+++ b/.env
@@ -28,3 +28,9 @@ APP_SECRET=a49826786ccf680bd93448fb2cb0fc9b
 DATABASE_URL="mysql://root:@127.0.0.1:3306/bilemo?serverVersion=mariadb-10.4.16"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=65e0765610e0f884c760afb68e7a72ed
+###< lexik/jwt-authentication-bundle ###
