--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,5 +3,13 @@
 #    controller: App\Controller\DefaultController::index
 
 # config/routes.yaml
+controllers:
+    resource: ../src/Controller/
+    type: annotation
+
+kernel:
+    resource: ../src/Kernel.php
+    type: annotation    
+
 api_login_check:
     path: /api/login_check 
