--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,14 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/annotations": "^1.0",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "lexik/jwt-authentication-bundle": "^2.16",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.13",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -24,6 +25,7 @@
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "^5.4",
         "symfony/serializer": "5.4.*",
+        "symfony/validator": "^5.4",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
