--- a/config/packages/jms_serializer.yaml
+++ b/config/packages/jms_serializer.yaml
@@ -1,7 +1,11 @@
 jms_serializer:
+    property_naming:
+        id: jms_serializer.identical_property_naming_strategy
     visitors:
         xml_serialization:
             format_output: '%kernel.debug%'
+        # property_naming:
+        # id: jms_serializer.identical_property_naming_strategy    
 #    metadata:
 #        auto_detection: false
 #        directories:
