--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,16 +2,18 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-        App\Entity\User:
-            algorithm: auto
-            
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'       
+        App\Entity\Client:
+            algorithm: auto    
+        # App\Entity\User:
+        #     algorithm: auto   
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\User
+                class: App\Entity\Client
                 property: email 
     firewalls:
         dev:
@@ -30,6 +32,8 @@ security:
         login:
             pattern: ^/api/login
             stateless: true
+            # anonymous: true
+            # provider: client_provider 
             json_login:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
