--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "lexik/jwt-authentication-bundle": "^2.16",
+        "nelmio/api-doc-bundle": "^4.10",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.13",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "^5.4",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
@@ -25,6 +27,7 @@
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "^5.4",
         "symfony/serializer": "5.4.*",
+        "symfony/twig-bundle": "^5.4",
         "symfony/validator": "^5.4",
         "symfony/yaml": "5.4.*",
         "willdurand/hateoas-bundle": "^2.5"
