--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,8 +5,8 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'       
         App\Entity\Client:
             algorithm: auto    
-        # App\Entity\User:
-        #     algorithm: auto   
+        App\Entity\User:
+            algorithm: auto   
 
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
