--- a/config/packages/paginator.yaml
+++ b/config/packages/paginator.yaml
@@ -6,9 +6,9 @@ knp_paginator:
         sort_field_name: sort           # sort field query parameter name
         sort_direction_name: direction  # sort direction query parameter name
         distinct: true                  # ensure distinct results, useful when ORM queries are using GROUP BY statements
-        filter_field_name: filterField  # filter field query parameter name
-        filter_value_name: filterValue  # filter value query paameter name
+        #filter_field_name: filterField  # filter field query parameter name
+        #ilter_value_name: filterValue  # filter value query paameter name
     template:
         pagination: '@KnpPaginator/Pagination/sliding.html.twig'     # sliding pagination controls template
         sortable: '@KnpPaginator/Pagination/sortable_link.html.twig' # sort link template
-        filtration: '@KnpPaginator/Pagination/filtration.html.twig'  # filters template
+        #filtration: '@KnpPaginator/Pagination/filtration.html.twig'  # filters template 
